# NMBU_INF200_Project

./: LICENSE  README.md  inf200jan_conda_env.yml  pyproject.toml  setup.cfg  tox.ini
data/: mono_hc_00100.csv  mono_hc_00101.csv  mono_hc_00102.csv  mono_hc_00103.csv  mono_hc_00104.csv  mono_hc_00105.csv  mono_hc_00106.csv  mono_hc_00107.csv  mono_hc_00108.csv  mono_hc_00109.csv  mono_hc_00110.csv  mono_hc_00111.csv  mono_hc_00112.csv  mono_hc_00113.csv  mono_hc_00114.csv  mono_hc_00115.csv  mono_hc_00116.csv  mono_hc_00117.csv  mono_hc_00118.csv  mono_hc_00119.csv  mono_hc_00120.csv  mono_hc_00121.csv  mono_hc_00122.csv  mono_hc_00123.csv  mono_hc_00124.csv  mono_hc_00125.csv  mono_hc_00126.csv  mono_hc_00127.csv  mono_hc_00128.csv  mono_hc_00129.csv  mono_hc_00130.csv  mono_hc_00131.csv  mono_hc_00132.csv  mono_hc_00133.csv  mono_hc_00134.csv  mono_hc_00135.csv  mono_hc_00136.csv  mono_hc_00137.csv  mono_hc_00138.csv  mono_hc_00139.csv  (+61 more)
docs/: author_info.rst  conf.py  fauna.rst  index.rst  landscape.rst  landscape_and_fauna.rst  map.rst  movie.rst  simulation.rst  simulation_and_map.rst  src_code_doc.rst  visualization.rst
examples/: profiling_experiment.py  testing_01.py  testing_02.py  testing_03.py  testing_04.py
reference_examples/: check_sim.py  fauna.py  herbivore_test.py  mono_hc.py  mono_ho.py  sample_sim.py  test_randvis.py  testing_01.py  testing_02.py  testing_03.py  testing_04.py
reference_tests/: test_biosim_interface.py
src/biosim/: Presentation points  __init__.py  diffsys.py  fauna.py  graphics.py  landscape.py  map.py  mapping.py  plot_updating.py  simulation.py  time_counter.py  visualization.py  visualization_1.py
src/biosim/animal/: carnivore.py  fauna.py  herbivore.py
src/biosim/landscape/: __init__.py  landscape.py
tests/: test_diffsys.py  test_fauna.py  test_landscape.py  test_map.py  test_simulation.py  test_statistical.py
(+2 files in other folders)
